
0.9.9k Apr 25, 2005
 * free locally created pkg list in purge_old_cached_pkgs()
 * added libcurl option CURLOPT_FOLLOWLOCATION so HTTP redirects are followed
 * initialized source in sources list [fixing valgrind warning]
 * updated FAQ

0.9.9j Apr 17, 2005
 * updated example.slapt-getrc
 * correctly set free_pkgs in pkg_lists within init_transaction and checked for
   it in free_transaction
 * use -fpic for library creation
 * updated withlibslapt make target 
 * added generate_suggestions() so that suggestions are properly detected
   after transaction has been created instead of checking multiple times
   if possible suggestions are present in the current transaction
 * fixed ignoring suggestion when there was only one suggestion
 * added copy_pkg() to package.[ch] instead of using memcpy() in the transaction
   code, so free_transaction() calls free_pkg() making all usage of pkg_info_t
   objects uniform
 * translation updates
 * fixed precision error in curl progress callback, d/l stats now report
   correct percentage
 * added queue_t struct to transaction_t so that installs/upgrades happen in
   the proper order, as discovered.
 * FAQ updates, also added "50. What about mirror fall back / fail-over ?"
 * added CURLOPT_FILETIME to libcurl calls so that ftp transfers have the
   modification date for checking whether the source is new or not (as 
   opposed to the file size).
 * added Slovenian translation by Emil Novak (emilnovak at gmail dot com)
 * added --available option to only show packages available from the current
   sources.  --list shows available and installed. --installed shows only
   the installed with a new output format.

0.9.9i Mar 06, 2005
 * set CURLOPT_HTTPAUTH to CURLAUTH_ANY for NTLM proxy users
 * fixed --remove bug
 * --list now properly shows installed packages
 * installed packages now parse out package location from /var/log/packages entry
 * added add_source() (libslapt)