@@ -1285,13 +1285,13 @@ static pkg_info_t *parse_meta_entry(struct pkg_list *avail_pkgs,struct pkg_list 
 		#if DEBUG == 1
 		printf("no conditional\n");
 		#endif
-		if( newest_avail_pkg != NULL ){
-			free_regex(&parse_dep_regex);
-			return newest_avail_pkg;
-		}
 		if( newest_installed_pkg != NULL ){
 			free_regex(&parse_dep_regex);
 			return newest_installed_pkg;
+		}
+		if( newest_avail_pkg != NULL ){
+			free_regex(&parse_dep_regex);
+			return newest_avail_pkg;
 		}
 	}
 
