@@ -1,5 +1,8 @@
 
 0.9.9k Apr 25, 2005
+ * when parsing meta entry for w/o conditionals, return newest installed version
+   instead of newest available by default, fall back to newest available other-
+   wise.
  * free locally created pkg list in purge_old_cached_pkgs()
  * added libcurl option CURLOPT_FOLLOWLOCATION so HTTP redirects are followed
  * initialized source in sources list [fixing valgrind warning]
